--- a/style.css
+++ b/style.css
@@ -39,6 +39,9 @@ body{
 .navbar .menu li .active{
     border-bottom: 1px solid #000;
 }
+.navbar .menu li .put{
+    border-bottom: 1px solid #000;
+}
 .navbar .menu li .a:hover{
     border-bottom: 1px solid #000;
 }
@@ -68,7 +71,7 @@ body{
 .produits_texte{
     text-align: left;
     font-size: 30px;
-    font-weight: 300;
+    font-weight: 500;
     margin-top: 30px;
     margin-left: 80px;
     color: #000;
@@ -102,12 +105,14 @@ body{
     font-size: 20px;
     color: #000;
     padding: 0 20px;
+    font-weight: 550;
 }
 .produits .carte .box{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    font-weight: 300;
 }
 .produits .carte .prix{
     color: rgb(6, 6, 6);
@@ -239,7 +244,7 @@ footer p a{
     color: #fff;
     border: none;
     padding: 2px 8px;
-    font-size: 14px;
+    font-size: 7px;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -251,8 +256,24 @@ footer p a{
     color: white;
     padding: 10px;
     border: none;
-    font-size: 15px;
+    font-size: 13px;
     border-radius: 8px;
     cursor: pointer;
     font-weight: bold;
+    font-weight: 300;
+}
+
+#countdown-container {
+    text-align: center;
+    margin-top: 40px;
+    font-weight: 300;
+}
+
+#countdown-big {
+    font-family: 'Oswald', sans-serif;
+    font-size: 75px;
+    font-weight: bold;
+    margin-top: 10px;
+    letter-spacing: 1px;
+    color: #000;
 }
